* Added code for putting all hosts back into rotation on the condition that
there are no good hosts remaining.
* Replaced old logging references in manager.checker with twisted.python.log
calls.
* Added missing call to configuration method in
application.director.configuredProxyManagerFactory; fix submitted by Shaival
Varma and addresses bug 255498.

2008.10.08

* Added a check for not writing the control XML node if it is not defined; fix
from Jehiah; addresses bug 277959.

2008.10.04

* Added icons for use in the project, taken from the "gartoon" icon set.

2008.10.03

* Added a fix for bug 277184 supplied by Jehiah.
* Added a similar fix for the web admin UI.
* Added proper default for crypt salt in utility.
* Added a fix for the isReadOnly bug 277851 supplied by Jehiah.
* Removed miss-applied boolify function, a bug fix for 277879 supplied by
Jehiah.

2008.07.10 oubiwann

* Fixed refresh bug submitted by Steffen Oschatz.

2008.07.09 oubiwann

* Moved utility functions out of setup.py and into util module.
* Moved setuptools imports (with fallback) to util module.
* Added DEPENDENCIES.
* Fixed a bug in application.director that crept in during the last merge.
* Added a build-checking script and added it to the commit script.
* Incremented the version number for next development cycle.
* Added more messages to the check-build script.
* Re-added (somehow) missing cleanup call.
* Consolidated cleanup command.
* Updated the README with information on using the txLB API.
* Updated TODO with more thoughts on the same .tac file serving as both the
proxied, content-serving host as well as the managing service.
* Changed the manager module to a subpackage due to increasing code growth.
* Moved checkers into manager.check.
* Updated manager tests.
* Added TCP ping capability (taken from the pymon project's pymon.utils.scanner).
* Added a docstring to the private callback.

2008.07.06 oubiwann

* Fixed errors in README REST.

2008.07.05 oubiwann
